--- a/dindinwebpage (1).css
+++ b/dindinwebpage (1).css
@@ -1,9 +1,13 @@
-.logo {
+@media only screen and (max-device-width: 900px) {
+.main { width:100%; } */
+    }
+
+.logo{
     position: absolute;
     width: 69px;
     height: 71px;
     left: 82px;
-    top: 20px;
+    top: 27px;
 }
 
 .navbar {
@@ -15,7 +19,7 @@
     box-shadow: 0px 3px 7px rgba(0, 0, 0, 0.25);
 }
 
-.navbar a1 {
+.a1{
     position: absolute;
     left: 1028px;
     top: 47px;
@@ -30,10 +34,10 @@
     color: #FDFDFD;
 }
 
-.navbar a2 {
+.a2{
     position: absolute;
-    left: 130px;
-    top: 0px;
+    left: 1150px;
+    top: 47px;
     display: flex;
     font-family: 'Ubuntu';
     font-style: normal;
@@ -45,10 +49,10 @@
     color: #FDFDFD;
 }
 
-.navbar a3 {
+.a3{
     position: absolute;
-    left: 100px;
-    top: 0px;
+    left: 1250px;
+    top: 47px;
     display: flex;
     font-family: 'Ubuntu';
     font-style: normal;
@@ -58,9 +62,9 @@
     /* identical to box height */
     text-transform: uppercase;
     color: #FDFDFD;
-}
+    }
 
-.textodestaque p1 {
+.textodestaque p1{
     position: absolute;
     width: 488px;
     height: 216px;
@@ -74,7 +78,7 @@
     color: #FF4081;
 }
 
-.textodestaque p2 {
+.textodestaque p2{
     position: absolute;
     width: 462px;
     height: 62px;
@@ -88,7 +92,7 @@
     color: #555555;
 }
 
-.textodestaque img {
+.textodestaque img{
     position: absolute;
     left: 120%;
     right: 14.31%;
@@ -97,7 +101,7 @@
     border: 2px solid #ffff;
 }
 
-.querosaber {
+.querosaber{
     box-sizing: border-box;
     position: absolute;
     width: 268px;
@@ -108,7 +112,7 @@
     border-radius: 62px;
 }
 
-.querosaber a {
+.querosaber a{
     position: absolute;
     width: 216px;
     height: 20.27px;
@@ -124,7 +128,7 @@
     color: #FF4081;
 }
 
-.backgroundamarelo1 {
+.backgroundamarelo1{
     position: relative;
     width: 1440px;
     height: 730px;
@@ -133,15 +137,15 @@
     background: #F7F7F7;
 }
 
-/*_____________________________________________________________________________________*/
 
-.imageminvestimento {
+
+.imageminvestimento{
     position: absolute;
     left: 150px;
     top: 950px;
 }
 
-.imageminvestimento p1 {
+.imageminvestimento p1{
     position: absolute;
     width: 344px;
     height: 29px;
@@ -160,7 +164,7 @@
     color: #FF4081;
 }
 
-.imageminvestimento p2 {
+.imageminvestimento p2{
     position: absolute;
     width: 344px;
     height: 29px;
@@ -177,38 +181,38 @@
     color: #000000;
 }
 
-.imagempoupando {
+.imagempoupando{
     position: absolute;
     left: 600px;
     top: 990px;
 }
 
-.imagempoupando p1 {
+.imagempoupando p1{
     position: absolute;
     width: 344px;
     height: 29px;
     left: -40px;
     top: 310px;
-
+    
     font-family: 'Ubuntu';
     font-style: normal;
     font-weight: 700;
     font-size: 25px;
     line-height: 29px;
     /* identical to box height */
-
+    
     text-align: center;
-
+    
     color: #FF4081;
 }
 
-.imagempoupando p2 {
+.imagempoupando p2{
     position: absolute;
     width: 344px;
     height: 29px;
     left: -40px;
     top: 410px;
-
+    
     font-family: 'Ubuntu';
     font-style: normal;
     font-weight: 300;
@@ -219,13 +223,13 @@
     color: #000000;
 }
 
-.imagemindependencia {
+.imagemindependencia{
     position: absolute;
     left: 1070px;
     top: 960px;
 }
 
-.imagemindependencia p1 {
+.imagemindependencia p1{
     position: absolute;
     width: 344px;
     height: 29px;
@@ -238,13 +242,13 @@
     font-size: 25px;
     line-height: 29px;
     /* identical to box height */
-
+    
     text-align: center;
-
+    
     color: #FF4081;
 }
 
-.imagemindependencia p2 {
+.imagemindependencia p2{
     position: absolute;
     width: 344px;
     height: 29px;
@@ -261,9 +265,7 @@
     color: #000000;
 }
 
-/*_____________________________________________________________________________________*/
-
-.oquefalam {
+.oquefalam{
     position: absolute;
     width: 478px;
     height: 50px;
@@ -279,9 +281,7 @@
     color: #009688;
 }
 
-/*___________________________________________*/
-
-.imgtexto1 {
+.imgtexto1{
     box-sizing: border-box;
 
     position: absolute;
@@ -290,12 +290,13 @@
     left: 128px;
     top: 1750px;
 
-    background: #FFFFFF;
+/*    background: #FFFFFF;
     border: 3px solid #FF4081;
     border-radius: 50px;
+*/
 }
 
-.texto1 {
+.texto1{
     position: absolute;
     width: 363px;
     height: 70.27px;
@@ -311,7 +312,7 @@
     color: #000000;
 }
 
-.subtexto1 {
+.subtexto1{
     position: absolute;
     width: 120px;
     height: 23.42px;
@@ -327,9 +328,7 @@
     color: #000000;
 }
 
-/*___________________________________________*/
-
-.imgtexto2 {
+.imgtexto2{
     box-sizing: border-box;
 
     position: absolute;
@@ -338,12 +337,13 @@
     left: 800px;
     top: 1750px;
 
-    background: #FFFFFF;
+/*    background: #FFFFFF;
     border: 3px solid #FF4081;
     border-radius: 50px;
+*/
 }
 
-.texto2 {
+.texto2{
     position: absolute;
     width: 363px;
     height: 70.27px;
@@ -359,7 +359,7 @@
     color: #000000;
 }
 
-.subtexto2 {
+.subtexto2{
     position: absolute;
     width: 120px;
     height: 23.42px;
@@ -375,9 +375,7 @@
     color: #000000;
 }
 
-/*___________________________________________*/
-
-.imgtexto3 {
+.imgtexto3{
     box-sizing: border-box;
 
     position: absolute;
@@ -386,12 +384,13 @@
     left: 128px;
     top: 2010px;
 
-    background: #FFFFFF;
+/*    background: #FFFFFF;
     border: 3px solid #FF4081;
     border-radius: 50px;
+*/
 }
 
-.texto3 {
+.texto3{
     position: absolute;
     width: 363px;
     height: 70.27px;
@@ -407,7 +406,7 @@
     color: #000000;
 }
 
-.subtexto3 {
+.subtexto3{
     position: absolute;
     width: 100px;
     height: 23.42px;
@@ -423,10 +422,7 @@
     color: #000000;
 }
 
-/*___________________________________________*/
-
-
-.imgtexto4 {
+.imgtexto4{
     box-sizing: border-box;
 
     position: absolute;
@@ -435,12 +431,13 @@
     left: 800px;
     top: 2010px;
 
-    background: #FFFFFF;
+/*    background: #FFFFFF;
     border: 3px solid #FF4081;
     border-radius: 50px;
+*/
 }
 
-.texto4 {
+.texto4{
     position: absolute;
     width: 363px;
     height: 70.27px;
@@ -456,7 +453,7 @@
     color: #000000;
 }
 
-.subtexto4 {
+.subtexto4{
     position: absolute;
     width: 100px;
     height: 23.42px;
@@ -472,9 +469,7 @@
     color: #000000;
 }
 
-/*___________________________________________*/
-
-.backgroundamarelo2 {
+.backgroundamarelo2{
     position: relative;
     width: 1440px;
     height: 730px;
@@ -483,316 +478,282 @@
     background: #F7F7F7;
 }
 
-/* CSS Maísa Início */
+.maisconteudo{
+    position: absolute;
+    width: 530px;
+    height: 43px;
+    left: 128px;
+    top: 2351px;
 
-* {
-    font-family: Ubuntu;
-}
-
-header {
-    display: flex;
-    background-color: #2E948A;
-    align-items: center;
-}
-
-.container-logo {
-    justify-content: left;
-}
-
-.logo-header {
-    width: 233px;
-    height: 71px;
-    padding: 20px 30px 20px 50px;
-}
-
-.nav-header {
-    flex-grow: 1;
-    text-align: right;
-}
-
-.menu-item-header {
-    text-decoration: none;
-    padding: 10px 103px 10px 10px;
-    color: #fdfdfd;
-    font-size: 20px;
+    font-family: 'Ubuntu';
+    font-style: normal;
     font-weight: 700;
+    font-size: 37px;
+    line-height: 43px;
+    /* identical to box height */
+    color: #009688;
 }
 
-
-#pagina-cursos {
-    margin: 5% 5% 5% 5%;
+.quadrado1{
+    position: absolute;
+    width: 319px;
+    height: 193px;
+    left: 128px;
+    top: 2467px;
+    
+    background: #C4C4C4;
 }
 
-#titulo-cursos {
+.quadrado2{
+    position: absolute;
+    width: 319px;
+    height: 193px;
+    left: 556px;
+    top: 2467px;
+
+    background: #C4C4C4;
+}
+
+.quadrado3{
+    position: absolute;
+    width: 319px;
+    height: 193px;
+    left: 984px;
+    top: 2467px;
+
+    background: #C4C4C4;
+}
+
+.paragrafoquadrado1 p1{
+    position: absolute;
+    width: 319px;
+    height: 114px;
+    left: 128px;
+    top: 2671px;
+
+    font-family: 'Ubuntu';
+    font-style: normal;
     font-weight: 700;
-    font-size: 60px;
-    color: #FF4081;
-    margin: 50px 0px 0px 40px;
+    font-size: 27px;
+    line-height: 31px;
+
+    color: #009688;
 }
 
-#cursos p {
-    font-size: 20px;
+.paragrafoquadrado1 p2{
+    position: absolute;
+    width: 319px;
+    height: 114px;
+    left: 128px;
+    top: 2700px;
+
+    font-family: 'Ubuntu';
+    font-style: normal;
     font-weight: 400;
-    margin: 0px 0px 60px 40px;
-}
-
-#investimento {
-    display: flex;
-    padding: 40px 120px 40px 80px;
-}
-
-#titulo-investimento {
-    font-size: 35px;
-    font-weight: 700;
-    color: #ff4081;
-}
-
-#investimento p {
     font-size: 18px;
-    font-weight: 300;
+    line-height: 20.68px;
+
     color: #000000;
-    text-align: left
 }
 
-#poupando {
-    display: flex;
-    padding: 100px 120px 40px 80px;
-}
+.paragrafoquadrado2 p1{
+    position: absolute;
+    width: 319px;
+    height: 114px;
+    left: 556px;
+    top: 2671px;
 
-#titulo-poupando {
-    font-size: 35px;
+    font-family: 'Ubuntu';
+    font-style: normal;
     font-weight: 700;
-    color: #ff4081;
+    font-size: 27px;
+    line-height: 31px;
+
+    color: #009688;
 }
 
-#poupando p {
-    font-size: 18px;
-    font-weight: 300;
-    color: #000000;
-    text-align: left;
-}
+.paragrafoquadrado2 p2{
+    position: absolute;
+    width: 319px;
+    height: 114px;
+    left: 556px;
+    top: 2700px;
 
-#independencia {
-    display: flex;
-    padding: 100px 120px 40px 80px;
-}
-
-#titulo-independencia {
-    font-size: 35px;
-    font-weight: 700;
-    color: #ff4081;
-    margin-right: 60px;
-}
-
-#independencia p {
-    font-size: 18px;
-    font-weight: 300;
-    color: #000000;
-    text-align: left;
-}
-
-.começar {
-    background-color: #419488;
-    font-size: 20px;
+    font-family: 'Ubuntu';
+    font-style: normal;
     font-weight: 400;
-    color: #ffffff;
-    border-radius: 62px;
-    border: 1px solid #ffffff;
-    width: 233px;
+    font-size: 18px;
+    line-height: 20.68px;
+
+    color: #000000;
+}
+
+.paragrafoquadrado3 p1{
+    position: absolute;
+    width: 319px;
+    height: 114px;
+    left: 984px;
+    top: 2671px;
+
+    font-family: 'Ubuntu';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 27px;
+    line-height: 31px;
+
+    color: #009688;
+}
+
+.paragrafoquadrado3 p2{
+    position: absolute;
+    width: 319px;
+    height: 114px;
+    left: 984px;
+    top: 2700px;
+
+    font-family: 'Ubuntu';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 18px;
+    line-height: 20.68px;
+
+    color: #000000;
+}
+
+.vertodososposts{
+    box-sizing: border-box;
+
+    position: absolute;
+    width: 289px;
     height: 51px;
-    margin-top: 30px;
-    cursor: pointer;
-}
+    left: 582px;
+    top: 2886px;
 
-.descritivo-cursos {
-    margin: -25px 50px 0px 100px;
-}
-
-footer {
-    height: 207px;
-    background-color: #2E948A;
-    display: flex;
-    align-items: center;
-    justify-content: space-around;
-}
-
-.nav-footer {
-    display: flex;
-    flex-direction: column;
-}
-
-.logo-footer {
-    width: 269px;
-    height: 101px;
-    padding: 20px 30px 20px 50px;
-}
-
-.menu-item-footer {
-    color: #ffffff;
-    font-size: 20px;
-    font-weight: 400;
-    text-decoration: none;
-}
-
-.link-footer {
-    display: flex;
-    flex-direction: column;
-    gap: 5px;
-}
-
-.button-footer {
-    background-color: #419488;
+    border: 2px solid #FF4081;
     border-radius: 62px;
-    border-color: #ffffff;
-    border: solid 1px;
-    color: #ffffff;
-    width: 240px;
-    height: 40px;
-    cursor: pointer;
 }
 
-#curso-investimento {
-    display: flex;
-    gap: 85px;
-    margin: 50px 440px 50px 150px;
-}
+.vertodososposts a{
+    position: absolute;
+    width: 207px;
+    height: 31px;
+    left: 40px;
+    top: 4px;
 
-.descritivo-investimento {
-    margin-right: 20px;
-    text-align: justify;
-}
+    font-family: 'Ubuntu';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 25px;
+    line-height: 29px;
 
-#investimento-para-iniciantes {
-    font-weight: 700;
-    font-size: 55px;
     color: #FF4081;
-    margin-right: 100px;
 }
 
-#curso-investimento p {
-    font-size: 20px;
-    font-weight: 300;
-    color: #000000;
+.imgfooter{
+    position: absolute;
+    width: 1440px;
+    height: 207px;
+    left: 0px;
+    top: 3000px;
+    
+    background: #2E948A;
+    box-shadow: 0px 3px 7px rgba(0, 0, 0, 0.25);
 }
 
-.imagem-investimento {
-    margin-top: 30px;
+.imgfooter img{
+    position: absolute;
+    width: 312px;
+    height: 102px;
+    left: 82px;
+    top: 53px;
 }
 
-.aula {
+.navfooter{
+    position: absolute;
+    width: 50px;
+    height: 102px;
+    left: 720px;
+    top: 3065px;
+    text-align: left;
+
     display: flex;
+    gap: 10px;
     justify-content: center;
-}
+    align-items: center;
 
-#aulas {
-    background-color: #f7f7f7;
-}
-
-#aulas iframe {
-    width: 600px;
-    height: 200px;
-    border: 3px solid #8E8E8E;
-    display: flex;
-    justify-content: center;
-
-}
-
-#aula1 {
-    padding: 60px;
-    margin: 0px 180px;
-}
-
-#aula2 {
-    padding: 60px;
-    margin: 0px 180px;
-}
-
-#aula3 {
-    padding: 60px;
-    margin: 0px 180px;
-}
-
-.descriçao {
-    display: flex;
-    flex-direction: column;
-}
-
-.descriçao h2 {
-    font-size: 35px;
-    font-weight: 700;
-    color: #FF4081;
-    margin-left: 300px;
-}
-
-.descriçao p {
+    font-family: 'Ubuntu';
+    font-style: normal;
+    font-weight: 400;
     font-size: 20px;
-    font-weight: 300;
-    color: #000000;
-    margin: 0px 80px 0px 300px;
-    text-align: start;
+    line-height: 23px;
+    
+    color: #FFFFFF;
+}   
+
+.proflink{
+    box-sizing: border-box;
+
+    position: absolute;
+    width: 289px;
+    height: 51px;
+    left: 1050px;
+    top: 3045px;
+
+    border: 2px solid #ffffff;
+    border-radius: 62px;
 }
 
-hr {
-    margin: 0px 70px;
-    background-color: #C4C4C4;
-    height: 2px;
+.proflink a{
+    box-sizing: border-box;
+
+    position: absolute;
+    width: 289px;
+    height: 51px;
+    left: 0px;
+    top: 10px;
+
+    font-family: 'Ubuntu';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 20px;
+    line-height: 23px;
+    /* identical to box height */
+
+    text-align: center;
+
+    color: #FFFFFF;
 }
 
-#menu-icon {
-    width: 40px;
-    display: none;
+.outrolink{
+    box-sizing: border-box;
+
+    position: absolute;
+    width: 289px;
+    height: 51px;
+    left: 1050px;
+    top: 3110px;
+
+    border: 2px solid #ffffff;
+    border-radius: 62px;
 }
 
-#menu-icon-footer {
-    width: 40px;
-    display: none;
+.outrolink a{
+    box-sizing: border-box;
+
+    position: absolute;
+    width: 289px;
+    height: 51px;
+    left: 0px;
+    top: 10px;
+    
+    font-family: 'Ubuntu';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 20px;
+    line-height: 23px;
+    /* identical to box height */
+
+    text-align: center;
+
+    color: #FFFFFF;
 }
-
-@media only screen and (max-width: 900px) {
-    .nav-header a {
-        display: none;
-    }
-
-    #menu-icon {
-        display: block;
-        cursor: pointer;
-    }
-
-    #aula1 {
-        flex-wrap: wrap;
-    }
-
-    #aula2 {
-        flex-wrap: wrap;
-    }
-
-    #aula3 {
-        flex-wrap: wrap;
-    }
-
-    .descriçao p {
-        margin: 0;
-    }
-
-    .descriçao h2 {
-        margin: 0;
-    }
-}
-
-@media only screen and (max-width: 700px) {
-    .link-footer {
-        display: none;
-    }
-
-    .nav-footer a {
-        display: none;
-    }
-
-    .logo-footer {
-        width: 134px;
-        height: 50px;
-        padding: 20px 30px 20px 50px;
-    }
-}
-
-/* CSS Maísa Final */
